fixed Profile image uploading bug, covered most part of app by success and error messages

--- a/components/toasts/Toasts.module.sass
+++ b/components/toasts/Toasts.module.sass
@@ -1,6 +1,6 @@
 .root
   position: fixed
-  z-index: 20
+  z-index: 30
   top: 100px
   left: 50%
   transform: translate(-50%, -151px)
